<resources>
    <string name="app_name">mCIT</string>
    <string name="app_name_full">Control &amp; Identification Toolbox for Motors</string>
    <string name="Documentation_Title">Software and hardware</string>
    <string name="DOCUMENT_IMAGE_CAPTION_00">Bridge circuit</string>
    <string name="DOCUMENT_IMAGE_CAPTION_01">Bridge circuit with a first order filter for testing the CIT</string>
    <string name="DOCUMENT_IMAGE_CAPTION_02">Bridge circuit with a second order filter for testing the CIT</string>
    <string name="BUTTON_PID">PID Controller</string>
    <string name="BUTTON_IDENIFICATION0">Zero order identification</string>
    <string name="BUTTON_IDENIFICATION1">First order identification</string>
    <string name="BUTTON_IDENIFICATION2">Second order identification</string>
    <string name="SAMPLING_TIME">Sampling time</string>
    <string name="ACTUAL_SAMPLING_TIME">Actual sampling time</string>
    <string name="TIME">Time t</string>
    <string name="GRAPH_CAPTION">Figure</string>
    <string name="GRAPHS">Figures</string>
    <string name="FIRMWARE">Download the firmware for Arduino from:\n\nhttps://github.com/skgadi/ControlToolbox/blob/master/Bridge/Arduino/latest.pde</string>
    <string name="OPEN_URL">Open in a browser</string>
    <string-array name="NAV_HEADS">
        <item>System response</item>
        <item>Parameter identification</item>
        <item>Traditional closed-loop control</item>
        <item>Anti-windup control</item>
    </string-array>
    <string-array name="NAV_ITEMS_0">
        <item>System response</item>
    </string-array>
    <string-array name="NAV_ITEMS_1">
        <item>First-order system (Velocity)</item>
        <item>Second-order system (Position)</item>
        <item>First-order system with integral action</item>
    </string-array>
    <string-array name="NAV_ITEMS_2">
        <item>PID controller for position</item>
        <item>PID controller for velocity</item>
    </string-array>
    <string-array name="NAV_ITEMS_3">
        <item>PID position controller with anti-windup</item>
        <item>PID velocity controller with anti-windup</item>
    </string-array>
    <string-array name="SIM_VIEW_HEADS">
        <item>Diagram</item>
        <item>Sampling time in milliseconds</item>
        <item>Parameters</item>
        <item>Signal generator</item>
        <item>Figure</item>
        <item>Instantaneous values</item>
    </string-array>
    <string-array name="AVAILABLE_SIGNALS">
        <item>Step function</item>
        <item>Sine wave</item>
        <item>Sawtooth wave</item>
        <item>Triangular wave</item>
        <item>Square wave</item>
        <item>Rectangular wave</item>
    </string-array>
    <string-array name="SIGNAL_GENERATOR_PARAMETERS">
        <item>Frequency</item>
        <item>| Amplitude</item>
        <item>| Start at</item>
        <item>| Duty cycle</item>
        <item>| Offset</item>
    </string-array>
    <string name="INVERT_SIGNAL">Invert signal (0\' compliment)</string>
    <string-array name="SCREENS_LIST">
        <item>Open loop system</item>
        <item>PID Controller</item>
        <item>Adaptive Controller for a first order system</item>
        <item>Adaptive Controller for a second order system</item>
        <item>Identification of a first order system</item>
        <item>Identification of a second order system</item>
        <item>System identification of first order with integral controller</item>
    </string-array>
    <string name="BUTTON_DOCUMENTATION">Software and hardware</string>
    <string name="BUTTON_SETTINGS">Settings</string>
    <string name="BUTTON_SHARE">Share</string>
    <string name="BUTTON_DOWNLOAD">Download</string>
    <string-array name="SETTINGS_WINDOW">
        <item>Simulation settings>>Sampling time in milli seconds</item>
        <item>Graph settings>>Number of retained samples (Larger values may slowdown your device)</item>
        <item>Default window zoom on the horizontal axis</item>
        <item>Window\'s height for the figures</item>
    </string-array>
    <string name="BUTTON_SAVE">Save</string>
    <string name="BUTTON_RESET">Reset to default values</string>
    <string name="BUTTON_RESET_SAVE">Reset and Save</string>
    <string name="BUTTON_CANCEL">Cancel</string>
    <string name="VERSION_INFO">Version: 1.0.0</string>
    <string-array name="TOASTS">
        <item>Hit the Back button again to exit</item>
        <item>Device is not pluged to the phone</item>
        <item>Couldn\'t able to establish a connection. Try again with proper permissions.</item>
        <item>Device is successfully connected.</item>
        <item>Unable to open the port. Detach, re-attach the device to fix the problem.</item>
        <item>Device is successfully disconnected.</item>
        <item>Unknown error. Detach, re-attach the device to fix the problem.</item>
        <item>Your android device is not having OTG enabled.</item>
        <item>Simulation not available: No model is available in this window simulate or the bridge is not connected.</item>
        <item>You cannot exit to the Main menu while the simulation is running. Stop the simulation before proceeding to the main menu.</item>
        <item>You cannot invoke this feature while simulation is in progress.</item>
        <item>This is not a valid integer number. Enter a number in the range</item>
        <item>Please press any of the buttons to exit this window.</item>
        <item>Bridge circuit is disconnected.</item>
        <item>Bridge is slow. Simulation is stopped to avoid system hanging. Check the following to troubleshoot. \n1) Flash the bridge circuit with proper firmware. Look into Software and hardware section for more information.\n2) Disconnect and reconnect the bridge circuit.\n3) If you want more tolerance time, please change in the settings.</item>
        <item>You cannot complete this without writing permissions to your storage device.</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string-array name="graph_zoom">
        <item>Reset zoom</item>
        <item>Show y=0</item>
    </string-array>
    <string name="graph_reset_zoom">Reset Zoom</string>
    <string name="graph_include_zero">Show y=0 axis</string>
    <string name="pref_header_simulation">Simulation settings</string>
    <string name="pref_sim_sampling_time">Sampling time (ms)</string>
    <string name="pref_sim_sampling_time_desc">Sampling time is the time interval between two consecutive samples</string>
    <string name="pref_sim_tolerance">Tolerance time (ms)</string>
    <string name="pref_sim_tolerance_desc">Simulation stops if your device is incapable of operating in this range.</string>
    <string name="pref_sim_stop_sim_after">Run simulation for (ms)</string>
    <string name="pref_sim_stop_sim_after_desc">Simulation stops at the selected value. Enter a negative number to run the simulation for infiniate duration.</string>
    <string name="pref_sim_actual_sampling_time_type">Select actual sampling time type</string>
    <string-array name="pref_sim_actual_sampling_time_type_entries">
        <item>Direct</item>
        <item>Simple moving average</item>
        <item>Cumulative moving average</item>
        
    </string-array>
    <string-array name="pref_sim_actual_sampling_time_type_values">
        <item>SIM</item>
        <item>SMA</item>
        <item>CMA</item>
        
    </string-array>
    <string name="pref_sim_ma_data_points">Number of data points for the moving average calculation</string>
    <string name="pref_sim_ma_data_points_desc">When simple is selected, this value is ignored.</string>
    <string name="pref_sim_wma_weight">Weight for weighted moving average</string>
    <string name="pref_sim_wma_weight_desc">In the calculation of WMA, this weight is used for the most recent and a step of 1 each previous sampling time.</string>
    <string name="pref_sim_velocity_avg_type">Velocity filter</string>
    <string-array name="pref_sim_velocity_avg_type_entries">
        <item>None</item>
        <item>Hann filter</item>
        <item>Hamming filter</item>
        <item>Blackman filter</item>
        <item>Blackman-Harris filter</item>
        <item>Blackman-Nuttall filter</item>
        <item>Flat top filter</item>
        <item>Gauss filter</item>
        <item>Triangular filter</item>
        <item>Bartlett filter</item>
        <item>Bartlett-Hann filter</item>
        <item>Kaiser filter</item>
    </string-array>
    <string-array name="pref_sim_velocity_avg_type_values">
        <item>NONE</item>
        <item>HANN</item>
        <item>HAMMING</item>
        <item>BLACKMAN</item>
        <item>BLACKMAN_HARRIS</item>
        <item>BLACKMAN_NUTTALL</item>
        <item>FLAT_TOP</item>
        <item>GAUSS</item>
        <item>TRIANGULAR</item>
        <item>BARTLETT</item>
        <item>BARTLETT_HANN</item>
        <item>KAISER</item>
    </string-array>
    <string name="pref_sim_rotation_unit">Unit for angular position &amp; velocity</string>
    <string-array name="pref_sim_rotation_unit_entries">
        <item>Number of rotations &amp; Rotations per minute</item>
        <item>Radians &amp; Radians per second</item>
        <item>Degree &amp; Degrees per second</item>
    </string-array>
    <string-array name="pref_sim_rotation_unit_values">
        <item>RPM</item>
        <item>RAD</item>
        <item>DEG</item>
    </string-array>
    <string name="pref_header_graphs">Graphs settings</string>
    <string name="pref_graph_refresh_after">Refresh period (ms)</string>
    <string name="pref_graph_refresh_after_desc">Refreshing at high rate may hinder the real-time clock.</string>
    <string name="pref_graph_collect_size">Retain sample size</string>
    <string name="pref_graph_collect_size_desc">Retains a sample size to display in the graph. Pinch-zoom can be used to change viewing size.</string>
    <string name="pref_graph_window_height">Window height (dp)</string>
    <string name="pref_graph_window_height_desc">Vertical axis length can be modified here. Pinch-zoom can be used to elongate horizontal axis</string>
    <string name="pref_graph_line_thickness">Line thickness (pixels)</string>
    <string name="pref_graph_line_thickness_desc">Thickness of the lines in the graphs.</string>
    <string name="pref_bridge_encoder_a">Enter digital input for encoder\'s A pin</string>
    <string name="pref_bridge_encoder_b">Enter digital input for encoder\'s B pin</string>
    <string name="pref_bridge_encoder_desc">Enter a valid port number for the encoder</string>
    <string name="pref_bridge_ao_port_plus">Analog output (PWM) for motor\'s positive terminal</string>
    <string name="pref_bridge_ao_port_minus">Analog output (PWM) for motor\'s negative terminal</string>
    <string name="pref_bridge_ao_port_desc">Enter a valid port number for the analog output port</string>
    <string name="pref_bridge_out_limit_upper">Bridge circuit\'s analog output upper limit</string>
    <string name="pref_bridge_out_limit_upper_desc">Enter the highest voltage that the bridge circuit can generate.</string>
    <string name="pref_bridge_encoder_max_count">Encoder counter unsigned maximum limint </string>
    <string name="pref_bridge_encoder_max_count_desc">Enter unsigned maximum counter capacity</string>
    <string name="pref_motor_counts_per_rev">Encoder counts per revolution</string>
    <string name="pref_motor_counts_per_rev_desc">Enter counts per revolution of your encoder.</string>
    <string name="pref_motor_max_rpm">Maximum motor RPM</string>
    <string name="pref_motor_max_rpm_desc">Enter the maximum speed that the motor can achieve in RPM</string>
    <string name="pref_motor_gear_ratio">Gear ratio</string>
    <string name="pref_motor_gear_ratio_desc">Input the gear ration from motor shaft to the output shaft. Use 1 for no gear condition.</string>
</resources>