<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="-1"
        android:key="sim_stop_sim_after"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="numberDecimal|numberSigned"
        android:title="@string/pref_sim_stop_sim_after"
        android:dialogMessage="@string/pref_sim_stop_sim_after_desc"/>
    <ListPreference
        android:defaultValue="RPM"
        android:entries="@array/pref_sim_rotation_unit_entries"
        android:entryValues="@array/pref_sim_rotation_unit_values"
        android:key="sim_rotation_unit"
        android:summary="%s"
        android:title="@string/pref_sim_rotation_unit" />
    <PreferenceCategory android:title="Real-time Settings">
        <EditTextPreference
            android:defaultValue="20"
            android:key="sim_sampling_time"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/pref_sim_sampling_time"
            android:dialogMessage="@string/pref_sim_sampling_time_desc"/>
        <EditTextPreference
            android:defaultValue="1000"
            android:key="sim_sampling_tolerance"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/pref_sim_tolerance"
            android:dialogMessage="@string/pref_sim_tolerance_desc"/>


        <!--ListPreference
            android:defaultValue="SIM"
            android:entries="@array/pref_sim_actual_sampling_time_type_entries"
            android:entryValues="@array/pref_sim_actual_sampling_time_type_values"
            android:key="sim_actual_sampling_time_type"
            android:summary="%s"
            android:title="@string/pref_sim_actual_sampling_time_type" /-->

    </PreferenceCategory>

    <PreferenceCategory android:title="Velocity Estimation">


        <ListPreference
            android:defaultValue="NONE"
            android:entries="@array/pref_sim_velocity_avg_type_entries"
            android:entryValues="@array/pref_sim_velocity_avg_type_values"
            android:key="sim_velocity_avg_type"
            android:summary="%s"
            android:title="@string/pref_sim_velocity_avg_type" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Parameter  for Simple, Weighted, and Exponential moving average">
        <EditTextPreference
            android:defaultValue="5"
            android:key="sim_ma_data_points"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/pref_sim_ma_data_points"
            android:dialogMessage="@string/pref_sim_ma_data_points_desc"/>

        <!--EditTextPreference
            android:defaultValue="15"
            android:key="sim_wma_weight"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/pref_sim_wma_weight"
            android:dialogMessage="@string/pref_sim_wma_weight_desc"/-->
    </PreferenceCategory>

    <PreferenceCategory android:title="Parameters for Luenberger Observer">
        <EditTextPreference
            android:defaultValue="8.7"
            android:key="sim_vel_observer_a"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:title="Motor parameter a"
            android:dialogMessage="Type a positive number"/>

        <EditTextPreference
            android:defaultValue="1"
            android:key="sim_vel_observer_b"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:title="Motor parameter b"
            android:dialogMessage="Type a positive number"/>
        <EditTextPreference
            android:defaultValue="30"
            android:key="sim_vel_observer_alpha"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:title="Location of pole on the left hand side of the axis (-\u03B1)"
            android:dialogMessage="Type a positive number"/>
        <EditTextPreference
            android:defaultValue="1"
            android:key="sim_vel_observer_k_o_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:title="First element of Gain matrix"
            android:dialogMessage="Type a positive number"/>
        <EditTextPreference
            android:defaultValue="1"
            android:key="sim_vel_observer_k_o_2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:title="Second element of Gain matrix"
            android:dialogMessage="Type a positive number"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Parameter  for High-pass filter based estimator">
        <EditTextPreference
            android:defaultValue="10"
            android:key="sim_ma_high_pass_filter_param"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:title="Frequency (\u03B1)"
            android:dialogMessage="Type a positive number"/>
    </PreferenceCategory>

</PreferenceScreen>
